# rust-tgbot-challenge

./: .gitignore  Cargo.toml  README.md  Settings.toml  docker-compose.yml
src/: bot_navi.rs  bot_save.rs  bot_update.rs  lib.rs  main.rs  models.rs  redis_service.rs  settings.rs  tg_service.rs
