[package]
name = "tgbot"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# для общения с телеграм
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] } # для отправки http запросов
#warp = "0.3" # для приема запросов на web hook, включает в себя крейт reqwest

# для общения с редисом
mobc = "0.7"
mobc-redis = "0.7"
redis = { version = "0.19", features = ["async-std-comp", "connection-manager"]}

# создавай потоки слушателей через tokio::spawn(...)
# ставь прогу в ожидание через единственный futures::future::pending().await
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

# разнотипные std::Result советую приводить к anyhow::Result
anyhow = "1.0"

# для файла конфигов приложения, опционально
config = { version = "0.11" }
